# ChangeLog for app-emulation/qemu-user
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-user/ChangeLog,v 1.21 2006/12/31 02:47:01 lu_zero Exp $

  31 Dec 2006; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.8.2.ebuild:
  Marked ppc

  22 Nov 2006; Kevin F. Quinn <kevquinn@gentoo.org> qemu-user-0.8.2.ebuild:
  Add QA variable indicating which files contain textrels; these are a feature
  of how qemu works.

*qemu-user-0.8.2 (16 Aug 2006)

  16 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.7.0-ppc-linker.patch, +qemu-user-0.8.2.ebuild:
  New version, I gave up about the sparc module (broken upstream)
  Patch took from the debian patchset as pointed by David Gurvich 
  <david.gurvich@verizon.net> in bug #138655

  09 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -qemu-user-0.7.0-r1.ebuild, -qemu-user-0.7.1.ebuild,
  -qemu-user-0.7.2.ebuild:
  clean out old versions

  07 May 2006; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.8.1.ebuild:
  Fix errno again for x86, thanks to lothalev@gmail.com

*qemu-user-0.8.1 (06 May 2006)

  06 May 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.8.0-gcc4-hacks.patch, qemu-user-0.8.0.ebuild,
  qemu-user-0.8.0.20060329.ebuild, +qemu-user-0.8.1.ebuild:
  New version and added Mandrake patch for gcc4 on x86

  27 Apr 2006; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.8.0.ebuild,
  qemu-user-0.8.0.20060329.ebuild:
  New target added: mips

  23 Apr 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.8.0-stwbrx.patch, qemu-user-0.8.0.ebuild,
  qemu-user-0.8.0.20060329.ebuild:
  PPC fix, thanks to dimitrij wagner <qwertyfive@gmx.net> for providing it

  19 Apr 2006; Daniel Gryniewicz <dang@gentoo.org> qemu-user-0.8.0.ebuild:
  Marked stable on amd64 per bug# 123972

  16 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  qemu-user-0.8.0.ebuild:
  Stable on ppc.

  01 Apr 2006; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.8.0.ebuild: