@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-user/qemu-user-0.8.2.ebuild,v 1.3 2006/12/31 02:47:01 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-user/qemu-user-0.8.2.ebuild,v 1.4 2007/01/02 20:29:33 opfer Exp $
 
 inherit eutils flag-o-matic
 
@@ -10,7 +10,7 @@ SRC_URI="http://fabrice.bellard.free.fr/qemu/${P/-user/}.tar.gz"
 
 LICENSE="GPL-2 LGPL-2.1"
 SLOT="0"
-KEYWORDS="-alpha ~amd64 ppc -sparc ~x86"
+KEYWORDS="-alpha ~amd64 ppc -sparc x86"
 IUSE=""  #qvm86 debug nptl qemu-fast nptlonly"
 RESTRICT="nostrip test"
 
