@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu-user
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-user/ChangeLog,v 1.21 2006/12/31 02:47:01 lu_zero Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-user/ChangeLog,v 1.22 2007/01/02 20:29:33 opfer Exp $
+
+  02 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
+  qemu-user-0.8.2.ebuild:
+  stable x86, bug #159522
 
   31 Dec 2006; Luca Barbato <lu_zero@gentoo.org> qemu-user-0.8.2.ebuild:
   Marked ppc
